--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 	<meta name="keywords" content="JS, JavaScript">
 	<meta name="author" content="Niksior">
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="styl.css">
+	<script src="js.js"></script>
 </head>
+<body>
+	<h2>Różne rzeczy dziwne i nie tylko....</h2>
+	<h1>1. Sortowanie kubełkowe<BR>
+		<a href="kubelkowe.html" ><img src="kubel.jpg"></a>
+	</h1>
+</body>
 </html>
