--- a/kubelkowe.html
+++ b/kubelkowe.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="Niksior">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="styl.css">
+	<script src="http://code.google.com/p/html5shiv/"></script>
 </head>
 <body>
 	<script src="kub.js"></script>
@@ -43,7 +44,9 @@
 
 	<h3 id="t_out">...</h3>
 
-
+	<h1>
+		<a href="index.html" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+	</h1>
 
 </body>
 </html>
