--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
 	<meta name="author" content="Niksior">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="styl.css">
+	<script src="http://code.google.com/p/html5shiv/"></script>
 	<script src="js.js"></script>
 </head>
+
 <body>
+	<script src="js2.js"></script>
 	<h2>Różne rzeczy dziwne i nie tylko....</h2>
+	
+
 	<h1>1. Sortowanie kubełkowe<BR>
 		<a href="kubelkowe.html" ><img src="kubel.jpg"></a>
 	</h1>
+
+	<h1>
+
+	</h1>
+
+	<h2>
+		<input onclick="imie()" type="button" value="Ja" name="B1">
+	</h2>
+	<h3 id="wys">......</h3>
+
 </body>
 </html>
