--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 
 	<h1>1. Sortowanie kubełkowe<BR>
-		<a href="kubelkowe.html" ><img src="kubel.jpg"></a>
+		<a href="\chomik\kub" ><img src="kubel.jpg"></a>
 	</h1>
 
 	<h1>
