--- a/kub/index.html
+++ b/kub/index.html
@@ -18,7 +18,7 @@
 
 
 	<h5>
-		<a href="https://github.com/Niksior"><img src="fork2.png"></a>
+		<a href="https://github.com/Niksior"><img src="\chomik\fork2.png"></a>
 	</h5>
 
 
@@ -45,7 +45,7 @@
 	<h3 id="t_out">...</h3>
 
 	<h1>
-		<a href="index.html" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="\chomik" ><img src="\chomik\wyjscie.jpg" width="100px" height="60px"></a>
 	</h1>
 
 </body>
