--- a/kub/index.html
+++ b/kub/index.html
@@ -45,7 +45,7 @@
 	<h3 id="t_out">...</h3>
 
 	<h1>
-		<a href="\chomik" ><img src="\chomik\wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="\chomik\" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
 	</h1>
 
 </body>
