--- a/ind/index.html
+++ b/ind/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>kupa</title>
 	<link rel="stylesheet" href="\chomik\styl.css">
-kupa
 </head>
-<body bgcolor="black">
+<body>
 kupa
 kupa
 <h3>
