--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	
 
 	<h1>1. Sortowanie kubełkowe<BR>
-		<a href="\chomik\kub" ><img src="kubel.jpg"></a>
+		<a href="\chomik\kub\" ><img src="kubel.jpg"></a>
 	</h1>
 
 	<h1>
-		<a href="\chomik\ind">hehehehe</a>
+		<a href="\chomik\ind\">hehehehe</a>
 	</h1>
 
 	<h2>
