--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="description" content="JS">
+	<title>Momo</title>
+
+	<meta name="description" content="JS">
 	<meta name="keywords" content="JS, JavaScript">
 	<meta name="author" content="Niksior">
 	<meta charset="utf-8">
+
 	<link rel="stylesheet" href="styl.css">
+	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 	<script src="http://code.google.com/p/html5shiv/"></script>
 	<script src="js.js"></script>
+
 </head>
 
 <body>
@@ -26,7 +32,8 @@
 	<h2>
 		<input onclick="imie()" type="button" value="Ja" name="B1">
 	</h2>
-	<h3 id="wys">......</h3>
+
+	<tro id="wys">......</tro>
 
 </body>
 </html>
