--- a/kub/index.html
+++ b/kub/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="description" content="JS">
+	<title>Zastin</title>
+	<meta name="description" content="JS">
 	<meta name="keywords" content="JS, JavaScript, Sortowanie kubełkowe, Bucket Sort">
 	<meta name="author" content="Niksior">
+
 	<meta charset="utf-8">
+
+	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="\chomik\styl.css">
+	
 	<script src="http://code.google.com/p/html5shiv/"></script>
 </head>
 <body>
