--- a/ind/index.html
+++ b/ind/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>kupa</title>
+	<title>Nana</title>
+
+	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="\chomik\styl.css">
+
+	<script src="http://code.google.com/p/html5shiv/"></script>
 </head>
 <body>
 kupa
