--- a/ind/index.html
+++ b/ind/index.html
@@ -4,6 +4,7 @@
 	<title>Nana</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="\chomik\styl.css">
 
 	<script src="http://code.google.com/p/html5shiv/"></script>
