--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" href="styl.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<script src="http://code.google.com/p/html5shiv/"></script>
 	<script src="js.js"></script>
