--- a/kub/index.html
+++ b/kub/index.html
@@ -9,8 +9,9 @@
 	<meta charset="utf-8">
 
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="\chomik\styl.css">
-	
+
 	<script src="http://code.google.com/p/html5shiv/"></script>
 </head>
 <body>
