--- a/index.html
+++ b/index.html
@@ -21,14 +21,28 @@
 	<script src="js2.js"></script>
 	<h2>Różne rzeczy dziwne i nie tylko....</h2>
 	
+	<h4>
+		<input onclick="lvl()" type="button" value="Lvl-uj stronę" name="hihi">
+	</h4>
 
-	<h1>1. Sortowanie kubełkowe<BR>
+	<h5>
+		<a href="https://github.com/Niksior"><img src="fork2.png"></a>
+	</h5>
+
+	<h1>
+		1. Sortowanie kubełkowe<BR>
 		<a href="\chomik\kub\" ><img src="kubel.jpg"></a>
 	</h1>
 
 	<h1>
 		<a href="\chomik\ind\">hehehehe</a>
 	</h1>
+
+	<h2>
+		
+	</h2>
+
+	<tro id="wlvl">Poziom tej strony wynosi 0</tro>
 
 	<h2>
 		<input onclick="imie()" type="button" value="Ja" name="B1">
