--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		
 	</h2>
 
-	<tro id="wlvl">Poziom tej strony wynosi 0</tro>
+	<tro id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</tro>
 
 	<h2>
 		<input onclick="imie()" type="button" value="Ja" name="B1">
