--- a/kub/index.html
+++ b/kub/index.html
@@ -18,14 +18,14 @@
 	<script src="kub.js"></script>
 
 
-	<h4>
+	<lCorner>
 		<input onclick="main()" type="button" value="Sortuj" name="B1">
-	</h4>
+	</lCorner>
 
 
-	<h5>
+	<rCorner>
 		<a href="https://github.com/Niksior"><img src="\chomik\fork2.png"></a>
-	</h5>
+	</rCorner>
 
 
 	<h2>
@@ -50,9 +50,9 @@
 
 	<h3 id="t_out">...</h3>
 
-	<h1>
+	<h2>
 		<a href="\chomik\" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
-	</h1>
+	</h2>
 
 </body>
 </html>
