cały czas do przodu

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Momo</title>
 
+	<!--[if lt IE 9]>
+	<script src="dist/html5shiv.js"></script>
+	<![endif]-->
+
 	<meta name="description" content="JS">
 	<meta name="keywords" content="JS, JavaScript">
 	<meta name="author" content="Niksior">
@@ -12,7 +16,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-	<script src="http://code.google.com/p/html5shiv/"></script>
+
 	<script src="js.js"></script>
 
 </head>
@@ -42,36 +46,36 @@
 			<a href="\chomik\ind\">hehehehe</a>
 		</nav>
 
-		<section>
-			<article>
-				<header>
-					<h1>A to ciekawe...</h1>
-				</header>
+			<section>
+				<article>
+					<header>
+						<h1>A to ciekawe...</h1>
+					</header>
 
-				<p id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</p>
-				<p><input onclick="imie()" type="button" value="Ja" name="B1"></p>
-				<footer>
-					<tro id="wys">...</tro>
-				</footer>
-			</article>
-			<article>
-				<header>
-					<h1>Chomik</h1>
-				</header>
-				<p>Bo wszystkie chomiki to jedna rodzina!</p>
-				<footer>
-					<h2>Świnka morska</h2>
-				</footer>
-			</article>
-		</section>
+					<p id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</p>
+					<p><input onclick="imie()" type="button" value="Ja" name="B1"></p>
+					<footer>
+						<tro id="wys">...</tro>
+					</footer>
+				</article>
+				<article>
+					<header>
+						<h1>Chomik</h1>
+					</header>
+					<p>Bo wszystkie chomiki to jedna rodzina!</p>
+					<footer>
+						<h2>Świnka morska</h2>
+					</footer>
+				</article>
+			</section>
 
-		<aside>
-			<h3>Aside</h3>
-			<p>Hanjitsu no<br>kan o enoki ni<br>semi no ari</p>
-		</aside>
-		<footer>
-			<h2>Stopka</h2>
-		</footer>
+			<aside>
+				<h3>Aside</h3>
+				<p>Hanjitsu no<br>kan o enoki ni<br>semi no ari</p>
+			</aside>
+			<footer>
+				<h2>Stopka</h2>
+			</footer>
 	</div>
 </body>
 </html>
