--- a/kub/index.html
+++ b/kub/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>Zastin</title>
+
+	<!--[if lt IE 9]>
+	<script src="dist/html5shiv.js"></script>
+	<![endif]-->
+
 	<meta name="description" content="JS">
 	<meta name="keywords" content="JS, JavaScript, Sortowanie kubełkowe, Bucket Sort">
 	<meta name="author" content="Niksior">
@@ -12,7 +17,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="\chomik\styl.css">
 
-	<script src="http://code.google.com/p/html5shiv/"></script>
+
 </head>
 <body>
 	<script src="kub.js"></script>
