--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 		<nav>
 			<h3>Nav</h3>
-			<a href="\chomik\kub\">Sortowanie kubełkowe</a>
-			<a href="\chomik\ind\">hehehehe</a>
+			<a href="/chomik/kub/">Sortowanie kubełkowe</a>
+			<a href="/chomik/ind/">hehehehe</a>
 		</nav>
 
 			<section>
