--- a/kub/index.html
+++ b/kub/index.html
@@ -15,7 +15,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="\chomik\styl.css">
+	<link rel="stylesheet" href="/chomik/styl.css">
 
 
 </head>
@@ -29,7 +29,7 @@
 
 
 	<rCorner>
-		<a href="https://github.com/Niksior"><img src="\chomik\fork2.png"></a>
+		<a href="https://github.com/Niksior"><img src="/chomik/fork2.png"></a>
 	</rCorner>
 
 
@@ -56,7 +56,7 @@
 	<h3 id="t_out">...</h3>
 
 	<h2>
-		<a href="\chomik\" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
 	</h2>
 
 </body>
