--- a/ind/index.html
+++ b/ind/index.html
@@ -9,7 +9,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="\chomik\styl.css">
+	<link rel="stylesheet" href="/chomik/styl.css">
 
 
 </head>
@@ -21,6 +21,6 @@ kupa
 </h3>
 
 <h2>
-		<a href="\chomik\" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
 </h2>
 </html>
