--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div id="container">
 
 		<nav>
-			<h3>Nav</h3>
+			<h3><input onclick="imie()" type="button" value="A ja to kto?" name="B1"></h3>
 			<a href="/chomik/kub/">Sortowanie kubełkowe</a>
 			<a href="/chomik/ind/">hehehehe</a>
 		</nav>
@@ -51,9 +51,7 @@
 					<header>
 						<h1>A to ciekawe...</h1>
 					</header>
-
-					<p id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</p>
-					<p><input onclick="imie()" type="button" value="Ja" name="B1"></p>
+						<p id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</p>
 					<footer>
 						<tro id="wys">...</tro>
 					</footer>
@@ -62,7 +60,7 @@
 					<header>
 						<h1>Chomik</h1>
 					</header>
-					<p>Bo wszystkie chomiki to jedna rodzina!</p>
+						<p>Bo wszystkie chomiki to jedna rodzina!</p>
 					<footer>
 						<h2>Świnka morska</h2>
 					</footer>
