--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<h3><input onclick="imie()" type="button" value="A ja to kto?" name="B1"></h3>
 			<a href="/chomik/kub/">Sortowanie kubełkowe</a>
 			<a href="/chomik/ind/">hehehehe</a>
+			<a href="/chomik/can/">Canvas</a>
 		</nav>
 
 			<section>
@@ -73,23 +74,7 @@
 				<h2>Stopka</h2>
 			</footer>
 
-			<section>
-				<table>
-					<tr>
-						<td>A1</td> <td>A2</td> <td>A3</td>
-					</tr>
-					<tr>
-						<td>B1</td> <td>B2</td> <td>B3</td>
-					</tr>
-					<tr>
-						<td>C1</td> <td>C2</td> <td>C3</td>
-					</tr>
-				</table>
-
-				<h3>Zaznacz przycisk, najedź myszką na komórkę tabeli i naciśnij ENTER, aby je zidentyfikować przy wykorzystaniu querySelector('td:hover').</h3>
-				<button type="button" id="findHover" autofocus>Znajdź konórkę 'td:hover'</button>
-				<h3 id="hoverResult"> asdasd </h3>
-			</section>
+			
 	</div>
 </body>
 </html>
