--- a/can/index.html
+++ b/can/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Nana</title>
+	<title>Yami</title>
 
+	<meta name="description" content="JS">
+	<meta name="keywords" content="JS, JavaScript, canvas">
+	<meta name="author" content="Niksior">
 
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 	<link rel="stylesheet" href="/chomik/styl.css">
 
 
 </head>
+
 <body>
-kupa
-kupa
-<h3>
-kupa
-</h3>
+
+
+
 
 <h2>
 		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
 </h2>
+
 </body>
+
 </html>
