--- a/can/index.html
+++ b/can/index.html
@@ -32,7 +32,7 @@ try {
 
 
 <h2>
-		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="/chomik/" ><img src="/chomik/wyjscie.jpg" width="100px" height="60px"></a>
 </h2>
 
 </body>
