--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
 				<h2>Stopka</h2>
 			</footer>
 
-			
+			<section>
+				<canvas id="diagonal" style="border: 1px solid;" width="200" height="200">
+				</canvas>
+				<canvas id="trails" style="border: 1px solid;" width="200" height="200">
+				</canvas>
+			</section>
 	</div>
 </body>
 </html>
