--- a/kub/index.html
+++ b/kub/index.html
@@ -54,7 +54,7 @@
 	<h3 id="t_out">...</h3>
 
 	<h2>
-		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="/chomik/" ><img src="/chomik/wyjscie.jpg" width="100px" height="60px"></a>
 	</h2>
 
 </body>
