--- a/can/index.html
+++ b/can/index.html
@@ -17,19 +17,9 @@
 
 <body>
 
-
+<canvas id="trails" style="border: 1px solid;" width="200" height="200">
+</canvas>
  
-<script>
-
-try {
-	document.createElement("canvas").getContext("2d");
-	document.getElementById("support").innerHTML="Wspiera.";
-} catch (e) {
-	document.getElementById("support").innerHTML="Nie wspiera.";
-}
-
-</script>
-
 
 <h2>
 		<a href="/chomik/" ><img src="/chomik/wyjscie.jpg" width="100px" height="60px"></a>
