--- a/ind/index.html
+++ b/ind/index.html
@@ -18,7 +18,7 @@ kupa
 </h3>
 
 <h2>
-		<a href="/chomik/" ><img src="wyjscie.jpg" width="100px" height="60px"></a>
+		<a href="/chomik/" ><img src="/chomik/wyjscie.jpg" width="100px" height="60px"></a>
 </h2>
 </body>
 </html>
