--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Oswald&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-
+	<script src="modernizr.min.js"></script>
 	<script src="js.js"></script>
 
 </head>
