--- a/can/index.html
+++ b/can/index.html
@@ -11,6 +11,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="/chomik/styl.css">
+	
+	<script src="/chomik/js2.js"></script>
 
 
 </head>
