--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<h1>A to ciekawe...</h1>
 					</header>
 						<p id="wlvl">Poziom tej strony jest równy poziomowi Twojego umusłu czyli 0</p>
-						<h3><input onclick="/chomik/death/" type="button" value="NIE KLIKAJ TU!" name="B1"></h3>
+						<a href="/chomik/death/">NIE KLIKAJ TU!!!</a>
 					<footer>
 						<tro id="wys">...</tro>
 					</footer>
