--- a/death/index.html
+++ b/death/index.html
@@ -19,6 +19,10 @@
 
 <body>
 
+		<rCorner>
+			<input onclick="dead()" type="button" value="BUM" name="hihi">
+		</rCorner>
+
 <h1 id="death">
 	HAHAHAHAHAHAHAHAHA
 </h1>
