--- a/death/index.html
+++ b/death/index.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" href="/chomik/styl.css">
 	
+	<script src="modernizr.min.js"></script>
 	<script src="/chomik/js.js"></script>
 
 
@@ -19,9 +20,9 @@
 
 <body>
 
-		<rCorner>
+		<h3>
 			<input onclick="dead()" type="button" value="BUM" name="hihi">
-		</rCorner>
+		</h3>
 
 <h1 id="death">
 	HAHAHAHAHAHAHAHAHA
