--- a/death/index.html
+++ b/death/index.html
@@ -12,7 +12,7 @@
 
 	<link rel="stylesheet" href="/chomik/styl.css">
 	
-	<script src="modernizr.min.js"></script>
+	<script src="/chomik/modernizr.min.js"></script>
 	<script src="/chomik/js.js"></script>
 
 
