--- a/death/index.html
+++ b/death/index.html
@@ -24,6 +24,10 @@
 			<input onclick="dead()" type="button" value="BUM" name="hihi">
 		</h3>
 
+		<h3>
+			<input onclick="dead2()" type="button" value="coś" name="hihi">
+		</h3>
+
 <h1 id="death">
 	HAHAHAHAHAHAHAHAHA
 </h1>
