--- a/index.html
+++ b/index.html
@@ -72,15 +72,8 @@
 				<p>Hanjitsu no<br>kan o enoki ni<br>semi no ari</p>
 			</aside>
 			<footer>
-				<h2>Stopka</h2>
+				<h2>Endo</h2>
 			</footer>
-
-			<section>
-				<canvas id="diagonal" style="border: 1px solid;" width="200" height="200">
-				</canvas>
-				<canvas id="trails" style="border: 1px solid;" width="200" height="200">
-				</canvas>
-			</section>
 	</div>
 </body>
 </html>
